@@ -1,0 +1,10 @@
+10 admin                00000 00000.00 A 
+05 Lock Lan             00000 00200.00   
+00                      00000 00000.00   
+10 admin                00000 00000.00 A 
+00                      00000 00000.00   
+10 John Doe             00000 00000.00 S 
+00                      00000 00000.00   
+10 John Doe             00000 00000.00 S 
+01 John Doe             12345 00005.00   
+00                      00000 00000.00   
