@@ -1,0 +1,3 @@
+10 John Doe             00000 00000.00 S 
+01 John Doe             12345 00005.00   
+00                      00000 00000.00   
